--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  like_button: ^2.0.5
+  json_annotation: ^4.8.0
+  flutter_staggered_grid_view: ^0.6.2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +64,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+     - assets/avartar.png
+     - assets/background.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
