--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   json_annotation: ^4.8.0
   flutter_staggered_grid_view: ^0.6.2
   http: ^0.13.5
+  shared_preferences: ^2.0.18
 
 dev_dependencies:
   flutter_test:
